[tool.poetry]
name = "lunchbreakbot"
version = "0.1.0"
description = "A telegram bot to collect orders, set reminders and more"
authors = ["MayStepanyan <mayisstepanyan97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
asynctest = "^0.13.0"
pytelegrambotapi = "^4.17.0"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
